updated create page with forms for rfp

--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -4,7 +4,7 @@
   </div>
   
   <div class="spec-wrapper2">
-    <h5>Name</h>
+    <h5>Characteristic</h>
   </div>
 
   <div class="spec-wrapper3">
