--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -48,36 +48,52 @@
     .spec-header {
       text-align: center;
     }
-    .spec-table-wrapper{
-      @include span-columns(12);
-    }
-    .spec-wrapper1 {
-      display: inline-block;
-      @include span-columns(2.2 of 12);
-      min-width: 125px;
-    }
-    .spec-wrapper2 {
-      display: inline-block;
-      @include span-columns(1.7 of 12);
-    }
-    .spec-wrapper3 {
-      display: inline-block;
-      @include span-columns(1.53 of 12);
-    }
-    .spec-wrapper4 {
-      display: inline-block;
-      @include span-columns(1.35 of 12);
-    }
-    .spec-wrapper5 {
-      display: inline-block;
-      @include span-columns(1.3 of 12);
-    }
-    .spec-wrapper6 {
-      display: inline-block;
-      @include span-columns(2.65 of 12);
-      min-width: 180px;
-    }
-  }     
+    .spec-field-wrapper2{
+      width: 100%;
+      .heading-name{
+        display: inline-block;
+      }
+      @include outer-container(100%);
+        .product-field-wrapper{
+          @include outer-container(10%);
+          @include span-columns(12);   
+          .spec-wrapper1 {
+            display: inline-block;
+            @include span-columns(2 of 12);
+            min-width: 125px;
+          }
+        }
+        .jr-spec-field-wrapper{
+          @include outer-container(90%);
+          @include span-columns(10);
+          margin-left: 14px;
+          input{
+            padding-left: 4px;
+          } 
+          .spec-wrapper2 {
+            display: inline-block;
+            @include span-columns(2 of 10);
+          }
+          .spec-wrapper3 {
+            display: inline-block;
+            @include span-columns(2 of 10);
+          }
+          .spec-wrapper4 {
+            display: inline-block;
+            @include span-columns(1.35 of 10);
+          }
+          .spec-wrapper5 {
+            display: inline-block;
+            @include span-columns(1.3 of 10);
+          }
+          .spec-wrapper6 {
+            display: inline-block;
+            @include span-columns(2.65 of 10);
+            min-width: 180px;
+          }
+        }
+      }
+    }     
 }
 
 .final-wrapper {
