--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -1,25 +1,23 @@
-<div class="test">
-  <div class="spec-wrapper1">
-    <h5>Product</h>
-  </div>
-  
-  <div class="spec-wrapper2">
-    <h5>Characteristic</h>
-  </div>
+<div class="spec-wrapper1">
+  <h5>Product</h>
+</div>
 
-  <div class="spec-wrapper3">
-    <h5>Unit</h>
-  </div>
+<div class="spec-wrapper2">
+  <h5 class="heading-name">Characteristic</h>
+</div>
 
-  <div class="spec-wrapper4">
-    <h5>Limit</h>
-  </div>
+<div class="spec-wrapper3">
+  <h5 class="heading-name">Unit</h>
+</div>
 
-  <div class="spec-wrapper5">
-    <h5>Value</h>
-  </div>
+<div class="spec-wrapper4">
+  <h5 class="heading-name">Limit</h>
+</div>
 
-  <div class="spec-wrapper6">
-    <h5>Test Method Reference</h>
-  </div>
+<div class="spec-wrapper5">
+  <h5 class="heading-name">Value</h>
+</div>
+
+<div class="spec-wrapper6">
+  <h5 class="heading-name">Test Method Reference</h>
 </div>
