--- a/app/views/rfps/_rfp_show.html.erb
+++ b/app/views/rfps/_rfp_show.html.erb
@@ -3,15 +3,11 @@
 </div>
 
 <div class="rfp-wrapper2">
-  <h5>Supply Quantity</h>
+  <h5>Cargo Size (ktons)</h>
 </div>
 
 <div class="rfp-wrapper2">
-  <h5>Supply Quantity</h>
-</div>
-
-<div class="rfp-wrapper2">
-  <h5>Contact Length</h>
+  <h5>Term of contract (months)</h>
 </div>
 
 <div class="rfp-wrapper2">
@@ -19,5 +15,5 @@
 </div>
 
 <div class="rfp-wrapper2">
-  <h5>Limit</h>
+  <h5>Contract Start Date</h>
 </div>
