--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -17,20 +17,20 @@
   </div>
 
   <div class="spec-wrapper3">
-    <%= f.text_field :unit, :required => true,  placeholder: "ex. Celcius*" %>
+    <%= f.text_field :unit, placeholder: "ex. Celcius" %>
   </div>
 
   <div class="spec-wrapper4">
-    <%= f.text_field :limit, :required => true,  placeholder: "max./min.*" %>
+    <%= f.text_field :limit, placeholder: "max./min." %>
   </div>
 
   <div class="spec-wrapper5">
-    <%= f.text_field :value, :required => true,  placeholder: "ex. 3.50*" %>
+    <%= f.text_field :value, placeholder: "ex. 3.50" %>
     <%= f.hidden_field :type %>
   </div>
 
   <div class="spec-wrapper6">
-    <%= f.text_field :test_method_reference, :required => true,  placeholder: "ex. ISO 3016)*" %>
+    <%= f.text_field :test_method_reference, placeholder: "ex. ISO 3016" %>
   </div>
 <br>
 <br>
