--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
  <header class="navigation" role="banner">
   <div class="navigation-wrapper">
     <a href="/" class="logo">
-      <img src="gasbp.png"  style="height:200px;" 
+      <img src="/gasbp.png"  style="height:200px;" 
         style="width:200px;" alt="Oil"/>
     </a>
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
@@ -66,7 +66,7 @@
 
 <footer class="footer" role="contentinfo">
   <div class="footer-logo">
-    <img src="oil-drop.png" alt="Logo image">
+    <img src="/oil-drop.png" alt="Logo image">
   </div>
   <div class="footer-links">
     <ul>
