--- a/app/views/rfps/index.html.erb
+++ b/app/views/rfps/index.html.erb
@@ -20,8 +20,8 @@
       
       <% @rfps.each do |p| %>
 
-    <p> <%= p.end_date %> </p>  
-    <p> <%= p.end_date %> </p>
+    <p> <%= nice_date p.end_date %> </p>  
+    <p> <%= nice_date p.delivery_date %> </p>
     <p> <%= p.order_size %> </p>
 
         
