--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -15,6 +15,7 @@
         <%= f.text_field :delivery_frequency, :required => true, placeholder: "# of Deliverys Over Contract Term*" %>
         
         <%= f.text_field :delivery_date, :required => true, placeholder: "Supply Start Date (MM/DD/YYYY)*"  %>
+        <%= f.text_field :delivery_type, :required => true, placeholder: "Shipping Type (ex. FOB)*"  %>
     </div> <!-- end of rfp-wrapper -->
 
     <div class="spec-field-wrapper">
