--- a/app/views/rfps/_rfp_show.html.erb
+++ b/app/views/rfps/_rfp_show.html.erb
@@ -1,23 +1,16 @@
 <div class="rfp-wrapper2">
-  <h5>RFP End Date</h>
-</div>
+  <p class="rfp-output">RFP End Date</p>
 
-<div class="rfp-wrapper2">
-  <h5>Cargo Size (ktons)</h>
-</div>
+  <p class="rfp-output">Cargo Size (ktons)</p>
 
-<div class="rfp-wrapper2">
-  <h5>Term of contract (months)</h>
-</div>
 
-<div class="rfp-wrapper2">
-  <h5>Total # Deliveries</h>
-</div>
+  <p class="rfp-output">Term of contract (months)</p>
 
-<div class="rfp-wrapper2">
-  <h5>Contract Start Date</h>
-</div>
 
-<div class="rfp-wrapper2">
-  <h5>Shipping Type</h>
+
+  <p class="rfp-output">Total # Deliveries</p>
+
+  <p class="rfp-output">Contract Start Date</p>
+
+  <p class="rfp-output">Shipping Type</p>
 </div>
