--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -1,23 +1,26 @@
-<div class="col-spec-wrapper1">
-  <h5>Product</h>
-</div>
+<div class="col-spec-show-wrapper1">
+  <p>
+    <h5>Product</h>
+  </p>
 
-<div class="col-spec-wrapper2">
-  <h5>Characteristic</h>
-</div>
+  <p>
+    <h5>Characteristic</h>
+  </p>
 
-<div class="col-spec-wrapper3">
-  <h5>Unit</h>
-</div>
+  <p>
+    <h5>Unit</h>
+  </p>
 
-<div class="col-spec-wrapper4">
-  <h5>Limit</h>
-</div>
+  <p>
+    <h5>Limit</h>
+  </p>
 
-<div class="col-spec-wrapper5">
-  <h5>Value</h>
-</div>
+  <p>
+    <h5>Value</h>
+  </p>
 
-<div class="col-spec-wrapper6">
-  <h5>Test Method Reference</h>
+  <p>
+    <h5>Test Method Reference</h>
+  </p>
+
 </div>
