--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -23,7 +23,7 @@
         <h3 class="spec-header">Specification Information</h3>
         
         <div class="col-wrapper">
-          <%= render "spec_show" %>
+          <%= render "spec_header" %>
         </div>
 
         <div class="product-field-wrapper"> 
