--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,7 +2,7 @@
   <img src="banner-image2.jpg" alt="">
   <div class="overlay"></div>
   <div class="copy">
-    <p></p>
+    <h1>Oil Xchange</h1>
   </div>
 </div>
 
