--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -1,26 +1,26 @@
-<div class="col-spec-show-wrapper1">
-  <p>
+<div class="col-spec-show-wrapper1">  
+  <div class="col-spec-show-wrapper2">
     <h5>Product</h>
-  </p>
+  </div>
 
-  <p>
+  <div class="col-spec-show-wrapper3">
     <h5>Characteristic</h>
-  </p>
+  </div>
 
-  <p>
+  <div class="col-spec-show-wrapper4">
     <h5>Unit</h>
-  </p>
+  </div>
 
-  <p>
+  <div class="col-spec-show-wrapper5">
     <h5>Limit</h>
-  </p>
+  </div>
 
-  <p>
+  <div class="col-spec-show-wrapper6">
     <h5>Value</h>
-  </p>
+  </div>
 
-  <p>
+  <div class="col-spec-show-wrapper7">
     <h5>Test Method Reference</h>
-  </p>
-
+  </div>
+  
 </div>
