--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,8 +1,9 @@
-<div class="image-gradient-dynamic">
-  <img src="banner-image2.jpg" alt="">
-  <div class="overlay"></div>
-  <div class="copy">
-    <h1>Oil Xchange</h1>
+<div class="hero">
+  <div class="hero-inner">
+      <div class="hero-copy">
+        <h1>Oil Xchange</h1>
+        <p> The New Platform For Physical Cargoe Trading</p>
+      </div>
   </div>
 </div>
 
@@ -12,7 +13,7 @@
       <img src="oil-ship.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>This Bullet Title</h2>
+      <h2>Supply Discovery</h2>
       <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
       </div>
   </li>  
@@ -21,7 +22,7 @@
       <img src="oil-rig.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Another Bullet Title</h2>
+      <h2>Product Placement</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
     </div>
   </li>
@@ -30,7 +31,7 @@
       <img src="oil-truck.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Last Bullet Title</h2>
+      <h2>RFP Transparency</h2>
       <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
     </div>
   </li> 
