--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,42 +4,64 @@
 
 // Banner Image
 
-.image-gradient-dynamic {
-  
-  line-height: 0;
-  position: relative;
-  width: 100%;
+.hero {  
+  $base-border-radius: 3px !default;
+  $action-color: #477DCA !default;
+  $large-screen: em(860) !default;
+  $hero-background-top: #7F99BE; 
+  $hero-background-bottom: #20392B;
+  $hero-color: black;
+  $gradient-angle: 10deg;
+  $hero-image: 'banner-image2.jpg';
 
-  img {
-   z-index: -1; 
-   height: auto;
-   left: 0; 
-   position: relative;
-   top: 0px;
-   width: 100%;
+  @include background(url($hero-image), linear-gradient($gradient-angle, $hero-background-bottom, $hero-background-top), no-repeat $hero-background-top scroll);
+  background-color: #324766;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 3em;
+  height: 580px;
+  opacity: 0.85;
+
+  .hero-logo img {
+    height: 4em;
+    margin-bottom: 1em;
   }
 
-  .copy {
-    @include transform(translate(-50%, -250%));
-    left: 50%;
+  .hero-inner {
+    @include outer-container;
+    @include clearfix;
     margin: auto;
-    position: absolute;
+    padding: 3.5em;
     text-align: center;
-    top: 50%;
-    
-    h1 {
-      color: black;
-      font-size: 38px;
-    }
 
-    p {
-      color: white;
-      line-height: 1.5em;
-      padding: 1em 2em;
-      position: relative;
+    .hero-copy {
+      text-align: center;
+      
+      h1 {
+        color: $hero-color;
+        font-size: 3.6em !important;
+        margin-bottom: 0.5em;
+
+        @include media($large-screen) {
+          font-size: 1.8em;
+        }
+      }
+
+      p {
+        color: $hero-color;
+        line-height: 0.8em;
+        margin: 0 auto 3em auto; 
+
+        @include media($large-screen) {
+          font-size: 1.3em !important;
+          max-width: 45%;
+        }
+      }
     }
   }
 }
+
 
 
 // Based on http://codepen.io/skeurentjes/
