updated styling on sign up page

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -24,7 +24,7 @@ p {
 }
 
 a {
-  color: #4dbc8c;
+  color: #808080  ;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.1s linear;
