--- a/app/views/rfps/_spec_header.html.erb
+++ b/app/views/rfps/_spec_header.html.erb
@@ -1,23 +1,23 @@
   <div class="col-spec-wrapper1">
-    <h5>Product</h>
+    <h5>Product</h5>
   </div>
 
   <div class="col-spec-wrapper2">
-    <h5>Characteristic</h>
+    <h5>Characteristic</h5>
   </div>
 
   <div class="col-spec-wrapper3">
-    <h5>Unit</h>
+    <h5>Unit</h5>
   </div>
 
   <div class="col-spec-wrapper4">
-    <h5>Limit</h>
+    <h5>Limit</h5>
   </div>
 
   <div class="col-spec-wrapper5">
-    <h5>Value</h>
+    <h5>Value</h5>
   </div>
 
   <div class="col-spec-wrapper6">
-    <h5>Test Method Reference</h>
+    <h5>Test Method Reference</h5>
   </div>
