--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -1,26 +1,26 @@
 <div class="col-spec-show-wrapper1">  
   <div class="col-spec-show-wrapper2">
-    <h5>Product</h>
+    <h5>Product</h5>
   </div>
 
   <div class="col-spec-show-wrapper3">
-    <h5>Characteristic</h>
+    <h5>Characteristic</h5>
   </div>
 
   <div class="col-spec-show-wrapper4">
-    <h5>Unit</h>
+    <h5>Unit</h5>
   </div>
 
   <div class="col-spec-show-wrapper5">
-    <h5>Limit</h>
+    <h5>Limit</h5>
   </div>
 
   <div class="col-spec-show-wrapper6">
-    <h5>Value</h>
+    <h5>Value</h5>
   </div>
 
   <div class="col-spec-show-wrapper7">
-    <h5>Test Method Reference</h>
+    <h5>Test Method Reference</h5>
   </div>
   
 </div>
