--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -49,7 +49,7 @@
   </div> <!-- end of text-field-wrapper -->
 
   <div class="final-wrapper">
-    <h5 class="required">*Required field</h>
+    <h5 class="required">*Required field</h5>
     
       <div class="actions">
        <%= f.submit "Create RFP" %>
