--- a/app/views/rfps/show.html.erb
+++ b/app/views/rfps/show.html.erb
@@ -76,9 +76,10 @@
     </div><!-- end of text-field-wrapper -->
   </div>    
 </div>
+
   <div class="edit-links">
     <%= link_to "Edit", edit_rfp_path(@rfp) %> |
-    <%= link_to "Destroy", rfp_path(@rfp), :confirm => 'Are you sure you want to delte RFP?', :method => :delete %> 
+    <%= link_to "Destroy", rfp_path(@rfp), :confirm => 'Are you sure you want to delete RFP?', :method => :delete %> 
   </div>
 
 
