--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,7 +2,7 @@
   <div class="hero-inner">
       <div class="hero-copy">
         <h1>Oil Xchange</h1>
-        <p> The New Platform For Physical Cargoe Trading</p>
+        <p> The Only Platform For Physical Cargoe Trading</p>
       </div>
   </div>
 </div>
