--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -46,7 +46,7 @@
       .col-spec-wrapper1{
         display: inline-block;
         @include span-columns(1.45  of 10);
-        width: 160px;
+        width: 108px;
       }
       .col-spec-wrapper2{
         display: inline-block;
@@ -130,7 +130,7 @@
 
 .show-field-wrapper {
   margin-left: 500px;
-  width: 1000px;
+  width: 1100px;
   @include outer-container(100%);
   input {
     padding-right: 0px;
@@ -143,7 +143,7 @@
     @include outer-container(40%);
     .spec-header {
      text-align: center;
-     color: #2a3440;
+     color: #808080;
     }
     .rfp-wrapper2 {
       @include span-columns(8 of 12);
@@ -162,27 +162,27 @@
     margin-left: 40px;
     .spec-header2 {
       padding-left: 100px;
-      color: #2a3440;
+      color: #808080;
     }
     .col-spec-show-wrapper1 {
       @include outer-container(100%);
       @include span-columns(12); 
       .col-spec-show-wrapper2 {
         display: inline-block;
-        @include span-columns(1.5  of 12);
+        @include span-columns(1.7  of 12);
         max-width: 130px;
       }
       .col-spec-show-wrapper3 {
         display: inline-block;
-        @include span-columns(2.5 of 12);
+        @include span-columns(2.3 of 12);
       }
       .col-spec-show-wrapper4 {
         display: inline-block;
-        @include span-columns(1.0 of 12);
+        @include span-columns(1.25 of 12);
       }
       .col-spec-show-wrapper5 {
         display: inline-block;
-        @include span-columns(1.0 of 12);
+        @include span-columns(1.15 of 12);
       }
       .col-spec-show-wrapper6 {
         display: inline-block;
@@ -201,20 +201,20 @@
       @include span-columns(12); 
       .spec-show-container1{
         display: inline-block;
-        @include span-columns(1.5  of 12);
-        width: 130px;
+        @include span-columns(1.7  of 12);
+        width: 77px;
       }
       .spec-show-container2{
         display: inline-block;
-        @include span-columns(2.5 of 12);
+        @include span-columns(2.3 of 12);
       }
       .spec-show-container3{
         display: inline-block;
-        @include span-columns(1.0 of 12);
+        @include span-columns(1.3 of 12);
       }
       .spec-show-container4{
         display: inline-block;
-        @include span-columns(1.0 of 12);
+        @include span-columns(1.2 of 12);
       }
       .spec-show-container5{
         display: inline-block;
@@ -234,22 +234,33 @@
   width: 110px;
   margin: auto;
   margin-bottom: 20px;
-  color: #2a3440;
+  
 }
 
 //Explore all RFPs
 
-.listing_wrapper {
+.explore-rfp-container {
+  height: 1000px;
+}
+
+.listing-wrapper {
   @include span-columns(10);
   @include omega();
   @include shift(1);
   padding-bottom: 40px;
 
   .header-text {
-      font-size: 3em;
-      color: #477DCA;
-      font-weight: lighter;
+      font-size: 2em;
+      color: #808080;
+      text-align: center;
+      margin-top: 15px;
+
     }
+  
+  #autocomplete-wrapper {
+    width: 800px;
+    margin: 0 auto;
+  }
 
   ul {
     text-align: center;
@@ -268,18 +279,19 @@
 }
 
 .rfp-listing-wrapper {
+  border: black 1px solid;
   @include outer-container;
   
   .column {
-    @include span-columns(4);
+    @include span-columns(12);
   }
   
   .rfp:hover {
-    background-color: lightblue;
+    background-color: grey;
   }
   .rfp {
     text-align: center;
-    height: 360px;
+    height: 100px;
     padding: 0px 10px;
     margin-bottom: 20px;
     border: 2px solid lightgray;
@@ -287,7 +299,7 @@
     
     .heading {
       text-align: left;
-      height: 60px;
+      height: 20px;
       position: relative;
 
       h2 {
@@ -323,9 +335,8 @@
       font-size: 12px;
     }
   }
-  
+}
 
-} 
 
 
 
