emptied the database and now the commodity is showing

--- a/app/views/rfps/index.html.erb
+++ b/app/views/rfps/index.html.erb
@@ -22,7 +22,7 @@
     
           <% @rfps.each do |p| %>
         
-          <h5> <%= p.commodity %> </h5>
+          <h5> <%= p.product.commodity %> </h5>
         </div>
 
           <h5> <%= nice_date p.end_date %> </h5>  
